2007-01-12  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_get_missing_plugins_foo):
	(bvw_get_missing_plugins_details):
	(bvw_get_missing_plugins_descriptions):
	(bvw_clear_missing_plugins_messages):
	(bvw_emit_missing_plugins_signal):
	(bvw_error_from_gst_error):
	(bacon_video_widget_open_with_subtitle):
	(bvw_stop_play_pipeline):
	  Only clear the list of missing plugins when we know that we won't
	  need them any longer (_stop() might be called from _open_with_uri()
	  before we assemble our proper error message, so don't clear list
	  there).

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_open_internal), (totem_embedded_play),
	(totem_embedded_set_error_logo),
	(totem_embedded_open_playlist_item), (totem_embedded_construct),
	(totem_embedded_push_parser): Some cleanups, start playing the
	playlist when the browser set it for us

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_play), (bacon_video_widget_pause):
	Refuse play/pause if we don't have an MRL loaded

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/2.html: use another video so we can see
	movement

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/3.html: it's test 3, not 1
	* browser-plugin/tests/4.html: added
	* browser-plugin/tests/playlist.asx: 

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/2.html: Modify the test so it tests for
	autoplay=false

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_update_menu):
	Add some debug in case there's no app found to launch the stream
	* browser-plugin/totemPlugin.cpp: when using an HREF, *do*
	autostart, otherwise we won't see the static image before the stream
	(Closes: #386531)

2007-01-12  Bastien Nocera  <hadess@hadess.net>
