@@ -1,0 +1,7 @@
+<h1>Test #2</h1><p>
+
+Simple QuickTime test<p>
+See <a href="http://bugzilla.gnome.org/show_bug.cgi?id=395792">http://bugzilla.gnome.org/show_bug.cgi?id=395792</a>
+
+
+<embed type="video/quicktime" src="/leopard.mov" width="512" height="394" controller="false"></embed>
