@@ -1,3 +1,7 @@
+2007-01-12  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/tests/5.html: add simple QuickTime test
+
 2007-01-12  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
